Footer alignment fixed & alt text added to nav icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -11400,6 +11400,13 @@ body {
   font-size: 18px;
 }
 
+.text-brown-75-nb {
+  color: #4e4232 !important;
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 100;
+  font-size: 18px;
+}
+
 .masthead-text-large {
   font-size: 50px;
 }
